--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=\, initial-scale=1.0">
-    <title>Document</title>
+    <title>Website Sederhana</title>
     <link rel="stylesheet" href="assets/styles/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -118,4 +118,5 @@
         <p>Belajar dasar pemrogaman web &#169; 2025, MUHAMMAD RAKHA ALFIANSYAH</p>
     </footer>
 </body>
+
 </html>
