--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header> 
         <div class="jumbotron">  
             <h1>BANDUNG</h1>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta quaerat laborum ab repellat repellendus quibusdam, natus voluptas mollitia aliquam labore.</p>
+            <p> "Kota Kembang" dan "Paris van Java"</p>
         </div> 
         <nav>
             <ul>
@@ -30,10 +30,10 @@
                 <h2>SEJARAH</h2>
                     <img src="assets/img/bandung.jpg" alt="SEJARAH" class="featured-image">
                     <p>
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempore eum ipsam, ipsum qui excepturi ipsa temporibus doloremque iusto ea fuga, distinctio, exercitationem consectetur labore. Sint suscipit placeat, beatae facilis quo quae eos animi obcaecati, nulla maxime id quidem vitae deserunt eaque optio, corrupti recusandae quas accusamus error deleniti sed tempore laboriosam. Tempora sunt labore laboriosam exercitationem laborum dicta perferendis in harum adipisci delectus ratione veniam, quidem numquam. Eveniet voluptate eum possimus fugiat debitis iure, nihil beatae officiis, vitae nobis, praesentium dolor ex sequi quaerat asperiores ad corrupti! Quisquam eum incidunt ducimus illo enim, consequatur deserunt obcaecati voluptas, quidem dolore tempora.
+                        Awal mula nama Bandung diperkirakan berasal dari kata "bendung" atau "banding", yang merujuk pada bendungan atau danau yang terbentuk akibat aliran lava dari Gunung Tangkuban Perahu. 
                     </p>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo veniam repudiandae eos quas, ad odio ullam cum obcaecati quia dolorem, corporis eaque et ut, perspiciatis ipsum iusto. Recusandae, repellendus quis.
+                        Kota Bandung memiliki sejarah panjang yang dimulai dari wilayah Tatar Ukur, bagian dari Kerajaan Pajajaran, hingga menjadi kota metropolitan seperti sekarang. 
                     </p>
             </article>
 
@@ -41,7 +41,7 @@
                 <h2>GEOGRAFI</h2>
                     <img src="assets/img/geografi.jpg" alt="GEOGRAFI" class="featured-image">
                     <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae assumenda esse magnam accusantium suscipit illo in doloribus, nihil nulla quo quisquam quia rerum sequi ex maxime voluptatem cupiditate adipisci! Reiciendis velit eaque molestiae impedit hic debitis sint illum aperiam consectetur quo cupiditate ducimus nisi, soluta dolor non minima quod iste quas, inventore, modi magni deleniti tenetur commodi voluptas? Provident inventore, nam dolorum possimus, distinctio pariatur ex deleniti quaerat dolore praesentium accusantium aut optio quis doloremque laboriosam mollitia non! Veniam in voluptatum dicta quia molestiae beatae quam minus quo deleniti nulla praesentium vitae cumque, vel, facere voluptas consequuntur optio rem? Quas.
+                        Bandung secara geografis terletak di dataran tinggi di Jawa Barat, dan dikelilingi oleh pegunungan.
                     </p>
             </article>
 
@@ -49,17 +49,17 @@
                 <h2>WISATA</h2>
                     <img src="assets/img/wisata.jpg" alt="WISATA" class="featured-image">
                     <p>
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta hic ratione, aperiam accusamus sequi impedit delectus? A accusantium eligendi maxime magni animi id reprehenderit? Porro laudantium modi suscipit dolorem pariatur vero tempora nobis, voluptatibus repudiandae voluptates libero, obcaecati vitae soluta quidem molestias iste explicabo? Vero totam eius, ad cumque rem dolorum necessitatibus! Dolorem vitae molestiae fugiat officiis eaque accusantium ipsam. Pariatur qui explicabo maiores sit porro. Exercitationem similique error vitae culpa hic nihil explicabo harum nemo veritatis mollitia earum voluptates laudantium id pariatur natus, laboriosam illo ducimus, ratione distinctio minus atque asperiores. Nisi error facilis rem cumque placeat quis impedit.
+                        Observatorium Bosscha terletak di Lembang, dataran tinggi yang sejuk, ideal untuk pengamatan astronomi. 
                     </p>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla sint reiciendis voluptates incidunt odit. Cum, error voluptas. Quas eum quam odit maiores, placeat nam inventore perspiciatis explicabo eius, voluptatibus illo!
+                        Gedung Sate, sebagai ikon kota Bandung, berada di pusat kota, dekat dengan berbagai fasilitas dan pusat pemerintahan. 
                     </p>
 
                 <section>
                     <h3>BOCHA</h3>
                     <img src="assets/img/bocha.jpg" alt="BOCHA" class="featured-image">
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, doloribus voluptas similique magni debitis facilis deserunt obcaecati sit quis minus ducimus. Rerum eveniet nesciunt incidunt magni esse eligendi saepe alias!
+                        Observatorium Bosscha, yang sekarang berada di bawah naungan Institut Teknologi Bandung (ITB), didirikan atas inisiatif Karel Albert Rudolf Bosscha pada tahun 1923. Observatorium ini merupakan observatorium astronomi modern pertama di Asia Tenggara. 
                     </p>
                 </section>
 
@@ -67,7 +67,7 @@
                     <h3>GEDUNG SATE</h3>
                     <img src="assets/img/gedungsate.jpg" alt="GEDUNG SATE" class="featured-image">
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus deleniti, exercitationem iure dolorum facilis nisi amet architecto animi, aliquid quam quisquam commodi sunt harum quasi rem omnis rerum! Quo, itaque?
+                        Gedung Sate, yang terletak di Bandung, Jawa Barat, adalah sebuah bangunan bersejarah yang awalnya dibangun sebagai kantor pemerintahan Hindia Belanda pada tahun 1920-an. Bangunan ini dikenal dengan ciri khas atapnya yang menyerupai tusuk sate dengan enam ornamen berbentuk buah. 
                     </p>
                 </section>
             </article>
@@ -120,3 +120,4 @@
 </body>
 
 </html>
+
